fix spacing issue on subsection 1

--- a/index.css
+++ b/index.css
@@ -48,7 +48,8 @@ body {
     background-color: #1F2937;
     display: flex;
     padding: 50px 100px;
-    gap: 60px
+    gap: 60px;
+    justify-content: space-between;
 }
 .subsec1 button {
     height: 30px;
